# justone

./: Cargo.toml  Dockerfile  LICENSE  README.md
include/: index.html  words_de.txt  words_en.txt  words_fr.txt  words_hu.txt  words_it.txt
src/: justone.rs  logic.rs  main.rs  server.rs
