[package]
name = "justone"
version = "0.1.0"
authors = ["Ben Ruijl <benruyl@gmail.com>"]
edition = "2018"

[dependencies]
warp = { version = "*", features = ["tls"] }
tokio = { version = "*", features = ["full", "io-util", "io-std", "sync"] }
futures = "*"
log = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
rand = "*"
clap = "*"
slog = "*"
slog-term = "*"
slog-async = "*"
slog-scope = "*"