[package]
name = "justone"
version = "0.1.0"
authors = ["Ben Ruijl <benruyl@gmail.com>"]
repository = "https://github.com/benruijl/justone"
keywords = ["game", "web"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A web version of Just One"

[dependencies]
warp = { version = "0.2", features = ["tls"] }
tokio = { version = "0.2", features = ["full", "io-util", "io-std", "sync"] }
futures = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.7"
clap = "2.33"
slog = "2.5"
slog-term = "2.6"
slog-async = "2.5"
slog-scope = "4.3"